<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/round_remove_24"
        android:scaleType="centerCrop"
        android:layout_gravity="center|top"
        android:contentDescription="@string/removeIconTopBottomsheetDialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/titleTextBottomsheetDialog"
            android:textSize="25sp"
            android:padding="8dp"
            android:textColor="@color/appbase"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_24"
            android:layout_marginStart="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cancelIconBottomsheetDialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutPlaylist"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_playlist_add_24"
            android:contentDescription="@string/newPlaylistIconBottomsheetDialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPlaylistTextBottomsheetDialog"
            android:textSize="16sp"
            android:textColor="@color/appbase"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

</LinearLayout>