<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/titleSignUp"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/alunoidEDT"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/idsignUp"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <EditText
                android:id="@+id/alunoNicknameEDT"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/userNameSignUp"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <EditText
                android:id="@+id/alunoSenhaEDT"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/passwordSignUp"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/cadatroBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/buttonSignUp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>