<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/teal_200">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/titleLoginFragment"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/userNameLoginFragment"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:hint="@string/passwordLoginFragment"
                android:importantForAutofill="no"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/buttonLoginFragment"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColorHint="@color/black"/>

            <TextView
                android:id="@+id/registerClick"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/registroButtonLoginFragment"
                android:textSize="20sp"
                android:enabled="true"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>