<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddMovieFragment"
    android:background="@color/teal_200">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="640dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleCad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/titleFragmentAddMovies"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/cadastroNomePlaylistET"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:hint="@string/playlistNameHint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/cadastroAutorET"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:hint="@string/playlistAuthorHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/tituloFilme1"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieTitleHint"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/anoFilme1"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieYearHint"
                    android:textAlignment="center"
                    android:importantForAutofill="no"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/tituloFilme2"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieTitleHint"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/anoFilme2"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieYearHint"
                    android:textAlignment="center"
                    android:importantForAutofill="no"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/tituloFilme3"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieTitleHint"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/anoFilme3"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieYearHint"
                    android:textAlignment="center"
                    android:importantForAutofill="no"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/tituloFilme4"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieTitleHint"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/anoFilme4"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:hint="@string/movieYearHint"
                    android:textAlignment="center"
                    android:importantForAutofill="no"
                    android:inputType="date" />

            </LinearLayout>

            <Button
                android:id="@+id/adicionarPlaylistBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/addPlaylistBtn"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>